# GenAI-CreditEngine

./: .gitignore  README.md  __main__.py  pyproject.toml
api/: proposals.py  router.py
core/: config.py  lifespan.py
core/common/: dao.py  exceptions.py
core/llm/: client.py
core/setup/: app.py
data/: compliance_manual.md
schemas/: proposal.py
services/ingestion/: self_healing.py  service.py
services/rag/: indexer.py  retriever.py  rrf.py
