[project]
name = "genai-creditengine"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlmodel>=0.0.22",
    "asyncpg>=0.30",
    "pydantic-settings>=2.7",
    "chromadb>=0.6",
    "httpx>=0.28",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "core", "dao", "models", "schemas", "services"]

[tool.hatch.build.targets.wheel.force-include]
"data/compliance_manual.md" = "data/compliance_manual.md"
